[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/UI/popupMenuNew.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/white background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Untitled_Artwork 2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/General/darkBlueBox.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Untitled_Artwork.jpg" type="Texture" id=5]
[ext_resource path="res://Sprites/General/redDot.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.8131, 10 )

[node name="popupMenu" type="Node2D" index="0"]

pause_mode = 2
position = Vector2( 514, 260 )
z_index = 999
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Z Index" ]

[node name="Underlay" type="Sprite" parent="." index="0"]

pause_mode = 2
position = Vector2( 0, 34 )
scale = Vector2( 18, 10.1125 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="Background" type="Sprite" parent="." index="1"]

pause_mode = 2
modulate = Color( 1, 1, 1, 0.117647 )
position = Vector2( -2.94333, 40.5 )
scale = Vector2( 1.68948, 1.964 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="Underlay2" type="Sprite" parent="." index="2"]

pause_mode = 2
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 21.65 )
scale = Vector2( 18, 4.00469 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="Options" type="MenuButton" parent="." index="3"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -508.0
margin_top = -40.0
margin_right = 508.0
margin_bottom = -9.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]

[node name="btnBackground" type="Sprite" parent="Options" index="1"]

pause_mode = 2
modulate = Color( 0.921569, 0.921569, 1, 1 )
show_behind_parent = true
position = Vector2( 505.9, 11 )
scale = Vector2( 1.70433, 0.162 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label" type="Label" parent="Options" index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 3.0
margin_right = 1016.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Options"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="btn" type="Area2D" parent="Options" index="3"]

pause_mode = 2
visible = false
position = Vector2( 504, 11 )
scale = Vector2( 16.0547, 0.6875 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="btn col" type="CollisionShape2D" parent="Options/btn" index="0"]

pause_mode = 2
visible = false
position = Vector2( 0.0852043, -0.509099 )
scale = Vector2( 1.00245, 3.1049 )
shape = SubResource( 1 )

[node name="controls" type="MenuButton" parent="." index="4"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -508.0
margin_top = 10.0
margin_right = 508.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]

[node name="btnBackground" type="Sprite" parent="controls" index="1"]

pause_mode = 2
modulate = Color( 0.921569, 0.921569, 1, 1 )
show_behind_parent = true
position = Vector2( 505.4, 11 )
scale = Vector2( 1.70433, 0.162 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label" type="Label" parent="controls" index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 2.0
margin_right = 1016.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Controls"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="btn" type="Area2D" parent="controls" index="3"]

pause_mode = 2
visible = false
position = Vector2( 504, 11 )
scale = Vector2( 16.0547, 0.6875 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="btn col" type="CollisionShape2D" parent="controls/btn" index="0"]

pause_mode = 2
visible = false
position = Vector2( 0.0852051, 0.21817 )
scale = Vector2( 1.00245, 3.1049 )
shape = SubResource( 1 )

[node name="continue" type="MenuButton" parent="." index="5"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -512.0
margin_top = -90.0
margin_right = 512.0
margin_bottom = -56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Margin", "Rect" ]

[node name="btnBackground" type="Sprite" parent="continue" index="1"]

pause_mode = 2
modulate = Color( 0.921569, 0.921569, 1, 1 )
position = Vector2( 509.9, 11 )
scale = Vector2( 1.70433, 0.162 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label" type="Label" parent="continue" index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -5.0
margin_top = 2.0
margin_right = 1027.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Continue"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="btn" type="Area2D" parent="continue" index="3"]

pause_mode = 2
visible = false
position = Vector2( 504, 11 )
scale = Vector2( 16.0547, 0.6875 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="btn col" type="CollisionShape2D" parent="continue/btn" index="0"]

pause_mode = 2
visible = false
position = Vector2( 0.0852043, -0.509099 )
scale = Vector2( 1.00245, 3.1049 )
shape = SubResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="mainMenu" type="MenuButton" parent="." index="6"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -512.0
margin_top = 60.0
margin_right = 512.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Margin", "Rect" ]

[node name="btnBackground" type="Sprite" parent="mainMenu" index="1"]

pause_mode = 2
modulate = Color( 0.921569, 0.921569, 1, 1 )
position = Vector2( 509.15, 11 )
scale = Vector2( 1.70583, 0.162 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label" type="Label" parent="mainMenu" index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -5.0
margin_top = 2.0
margin_right = 1027.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Main Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="btn" type="Area2D" parent="mainMenu" index="3"]

pause_mode = 2
visible = false
position = Vector2( 504, 11 )
scale = Vector2( 16.0547, 0.6875 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="btn col" type="CollisionShape2D" parent="mainMenu/btn" index="0"]

pause_mode = 2
visible = false
position = Vector2( 0.0852032, -0.509094 )
scale = Vector2( 1.00245, 3.1049 )
shape = SubResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="quit" type="MenuButton" parent="." index="7"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -508.0
margin_top = 110.0
margin_right = 508.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
items = [  ]
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]

[node name="btnBackground" type="Sprite" parent="quit" index="1"]

pause_mode = 2
modulate = Color( 0.921569, 0.921569, 1, 1 )
show_behind_parent = true
position = Vector2( 505.9, 11 )
scale = Vector2( 1.705, 0.162 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Label" type="Label" parent="quit" index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 2.0
margin_right = 1016.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Quit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="btn" type="Area2D" parent="quit" index="3"]

pause_mode = 2
visible = false
position = Vector2( 504, 11 )
scale = Vector2( 16.0547, 0.6875 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="btn col" type="CollisionShape2D" parent="quit/btn" index="0"]

pause_mode = 2
visible = false
position = Vector2( 0.0852043, -0.509099 )
scale = Vector2( 1.00245, 3.1049 )
shape = SubResource( 1 )

[node name="Overlay" type="Sprite" parent="." index="8"]

pause_mode = 2
visible = false
modulate = Color( 0.392157, 0, 0, 0.588235 )
scale = Vector2( 100, 100 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="focus_entered" from="Options" to="." method="_on_Options_focus_entered"]

[connection signal="focus_exited" from="Options" to="." method="_on_Options_focus_exited"]

[connection signal="mouse_entered" from="Options" to="." method="_on_Options_mouse_entered"]

[connection signal="mouse_exited" from="Options" to="." method="_on_Options_mouse_exited"]

[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]

[connection signal="focus_entered" from="controls" to="." method="_on_controls_focus_entered"]

[connection signal="focus_exited" from="controls" to="." method="_on_controls_focus_exited"]

[connection signal="mouse_entered" from="controls" to="." method="_on_controls_mouse_entered"]

[connection signal="mouse_exited" from="controls" to="." method="_on_controls_mouse_exited"]

[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]

[connection signal="focus_entered" from="continue" to="." method="_on_continue_focus_entered"]

[connection signal="focus_exited" from="continue" to="." method="_on_continue_focus_exited"]

[connection signal="mouse_entered" from="continue" to="." method="_on_continue_mouse_entered"]

[connection signal="mouse_exited" from="continue" to="." method="_on_continue_mouse_exited"]

[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]

[connection signal="focus_entered" from="mainMenu" to="." method="_on_mainMenu_focus_entered"]

[connection signal="focus_exited" from="mainMenu" to="." method="_on_mainMenu_focus_exited"]

[connection signal="mouse_entered" from="mainMenu" to="." method="_on_mainMenu_mouse_entered"]

[connection signal="mouse_exited" from="mainMenu" to="." method="_on_mainMenu_mouse_exited"]

[connection signal="pressed" from="mainMenu" to="." method="_on_mainMenu_pressed"]

[connection signal="focus_entered" from="quit" to="." method="_on_quit_focus_entered"]

[connection signal="focus_exited" from="quit" to="." method="_on_quit_focus_exited"]

[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]

[connection signal="mouse_exited" from="quit" to="." method="_on_quit_mouse_exited"]

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]


